WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303071
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/block-in-inline-align-last-001.html
https://bugs.webkit.org/show_bug.cgi?id=303071
Summary
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/b...
alan
Reported
2025-11-24 18:55:41 PST
ssia
Attachments
Patch
(5.21 KB, patch)
2025-11-24 19:02 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(5.21 KB, patch)
2025-11-25 05:20 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-11-24 19:02:41 PST
Created
attachment 477508
[details]
Patch
alan
Comment 2
2025-11-25 05:20:12 PST
Created
attachment 477511
[details]
[fast-cq]Patch
EWS
Comment 3
2025-11-25 07:01:17 PST
Committed
303540@main
(7c0cf3e6eb9d): <
https://commits.webkit.org/303540@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477511
[details]
.
Radar WebKit Bug Importer
Comment 4
2025-11-25 07:02:14 PST
<
rdar://problem/165399942
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug