[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/block-in-inline-align-last-001.html https://bugs.webkit.org/show_bug.cgi?id=303071

Reviewed by Antti Koivisto.

When line break is caused by a subsequent block level element, align-last should apply.

Test: fast/inline/blocks-in-inline-layout-with-last-line-align.html

* LayoutTests/fast/inline/blocks-in-inline-layout-with-last-line-align-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-layout-with-last-line-align.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::layoutInlineContent):
(WebCore::Layout::LineBuilder::placeInlineAndFloatContent):

Canonical link: https://commits.webkit.org/303540@main